--- a/less/main-content.less
+++ b/less/main-content.less
@@ -33,6 +33,7 @@
             @media (max-width: 480px) {
                 h1 {
                     left: 4vw;
+                    font-size: 4.4rem; 
                 }
             }
         }
